# provenika

./: .firebaserc  .gitignore  Makefile  README.md  firebase.json  firestore.rules  package-lock.json  package.json  pyproject.toml  requirements.txt  test-unrestricted-access.ts  verify-unrestricted-access.cjs
.github/workflows/: cheminformatics-precompute.yml  ci.yml  healthcheck.yml  hosting-deploy.yml  news-update.yml
agents/: agi-code.rules.json  general.rules.json
business/: BRAND.md  BUSINESS-MODEL-AND-FUNDING.md  COMPETITION.md  MARKET.md  README.md
cad/: batch_dock.py  binding_site.py  cheminformatics.py  china_burden.py  cn_labs.py  cost_benefit.py  dock.py  explain.py  fetch_structure.py  mutations.py  news_update.py  precompute_site_data.py  provenance.py  requirements-docking.txt  requirements.txt  resistance.py  run_pipeline.py  target_evidence.py  target_panel.py  target_report.py  test_batch_dock.py  test_binding_site.py  test_cheminformatics.py  test_china_burden.py  test_cn_labs.py  test_degradation.py  test_dock.py  test_dock_meeko.py  test_explain.py  test_fetch_structure.py  test_mutations.py  test_news_update.py  test_no_rdkit.py  test_precompute_index.py  test_provenance.py  test_resistance.py  test_resolve_target.py  test_target_evidence.py  test_target_panel.py  test_target_report.py  (+11 more)
cad/intel/: .gitkeep  2026-06-28.md  2026-06-29.md  LATEST.md
cicd/: audit_medical_safety.cjs  cad_solutions.json  cad_summary.json  check_cheminformatics_contract.cjs  check_readme.sh  experimental_limits_body.md  generate_readme.py  patient_match.py  run_cad_all.py  run_cad_discovery.py  runner.py  watcher.py
docs/: ANTI-HALLUCINATION.md  CHINA.md  CLINICAL-PATHWAY.md  CURING-CANCER.md  IMPLEMENTATION.md  REAL-CAD-ROADMAP.md
examples/portfolio/: README.md
examples/sample-run-egfr/: README.md  SUMMARY.md  binding_site.json  cost_benefit.json  dossier.json  hits.csv  hits.sdf  liabilities.json  provenance.json
examples/sample-run-egfr-docked/: README.md  SUMMARY.md  VALIDATION-REQUEST.md  binding_site.json  docked_hits.csv  liabilities.json  provenance.json
examples/target-panel/: README.md  china-priority.md  ranking.json  ranking.md
examples/validation-enrichment/: EGFR.json  README.md
examples/validation-redock/: README.md  batch_redock.py  batch_results.json  results.json
golive/: DOMAIN-SETUP.md  GO-LIVE.md
outreach/: .env.example  README.md  agent.py  cli.py  config.py  control.py  emailer.py  health.py  install_monitor.sh  lambda_handler.py  llm.py  monitor.py  prospects.seed.json  requirements.txt  research.py  seed_prospects.py  store.py  template.yaml  test_e2e.py
pitch/: ONE-PAGER.md  PITCH.md  TARGET-LIST.md  YC.md
pitch/investors/: Amplify-Bio.md  Boldstart.md  Compound.md  Decibel.md  Heavybit.md  KdT-Ventures.md  Lux-Capital.md  Mozilla-Ventures.md  OSS-Capital.md  README.md  YC.md
qa/: E2E-AND-EDGE-CASES.md
scripts/: continuous_loop.py
src/capabilities/: hitlCapability.ts  index.ts  unifiedCodingCapability.ts
src/contracts/: agent-schemas.json
src/core/: agent.ts  agiCore.ts  dynamicGuardrails.ts  flowProtection.ts  gitWorktreeManager.ts  global-macbook-access.ts  hitl.ts  hotReload.ts  index.ts  modelDiscovery.ts  multilinePasteHandler.ts  secretStore.ts  selfUpgrade.ts  shutdown.ts  sudoPasswordManager.ts  testFailureMonitor.ts  unrestricted-mode.ts
src/datasources/: index.ts
src/domain/: index.ts
src/headless/: interactiveShell.ts  osintMode.ts  quickMode.ts
src/orchestration/: index.ts
src/plugins/: index.ts
src/providers/: openaiChatCompletionsProvider.ts
src/runtime/: node.ts
src/shell/: commandRegistry.ts  composableMessage.ts
src/tools/: bashTools.ts  editTools.ts  fileChangeTracker.ts  fileTools.ts  grepTools.ts  hitlTools.ts  searchTools.ts  telemetryTools.ts
src/ui/: PromptController.ts  (+1 more)
test/: medicalSafety.test.ts  osintMode.test.ts  paste-leak.test.ts  unifiedUIRenderer.test.ts
web/: README.md  angular.json  package-lock.json  package.json
(+230 files in other folders)
